refactor [impl] 部门成员树优化